--- a/client/style.css
+++ b/client/style.css
@@ -1,1 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme inline {
+  --font-poppins: "Poppins", sans-serif;
+}
